# hexlet-git

./: module.py  pyproject.toml
hello/: pyproject.toml
hello/scripts/: say_hello.py
