[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Semyon Kazantsev <semyon.kazantsev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
